# media-proxy-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  config.json  dav1d_build.sh  example.compose.yml  example.config.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: 01_bug-report.yml  02_feature-request.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: 02_feature.md
.github/workflows/: devskim.yml  docker-publish.yml  osv-scanner.yml
avif-decoder_dep/: Cargo.toml
crossfiles/: 386.sh  amd64.sh  arm64.sh  build.sh  deps.sh  riscv64.sh
crossfiles/arm/: v6.sh  v7.sh
examples/: healthcheck.rs
src/: browsersafe.rs  image_test.rs  img.rs  main.rs  svg.rs
