[package]
name = "media-proxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["avif-decoder"]
avif-decoder = ["image/avif-native","image/nasm"]

[dependencies]
tokio-stream = "*"
axum = { version = "^0.6", features = ["headers","http2"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["io"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "^0.3.8"
serde = {version="^1.0.164",features=["derive"]}
serde_json ="1"
reqwest = { version = "0.11", default-features = false , features = ["stream","rustls-tls-webpki-roots"] }
image = "0.25"
webp = { version = "0.2.7", default-features = false }
resvg = {version="0.41",features = [ "text","memmap-fonts","raster-images" ] }
rexif = "0.7.3"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
